# CyclingApp

./: .cproject  .project  CMakeLists.txt  CyclingApp.pro  README.md  common.pri
CyclingApp/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  PlotWindow.cpp  PlotWindow.h  main.cpp
CyclingApp/forms/: MainWindowBase.ui
CyclingApp/qtquick2controlsapplicationviewer/: qtquick2controlsapplicationviewer.cpp
app/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  PlotWindow.cpp  app.pro  app.qrc  main.cpp
app/forms/: MainWindowBase.ui  PlotWindowBase.ui
app/qml/app/: main.qml
gpsdata/: Activity.cpp  Activity.h  ActivityDB.cpp  ActivityDB.h  ActivityItem.cpp  ActivityItem.h  ActivityListModel.cpp  ActivityListModel.h  CMakeLists.txt  GpsPosition.cpp  IDataSource.cpp  IDataSource.h  Lap.cpp  Lap.h  TcxDataSource.cpp  TcxDataSource.h  TcxWriter.cpp  TcxWriter.h  Trackpoint.cpp  Trackpoint.h  TreeItem.cpp  TreeItem.h  qcustomplot.cpp
src/: Activity.cpp  Activity.h  ActivityDB.cpp  ActivityDB.h  ActivityItem.cpp  ActivityItem.h  ActivityListModel.cpp  ActivityListModel.h  CMakeLists.txt  GpsPosition.cpp  GpsPosition.h  IDataSource.cpp  IDataSource.h  Lap.cpp  Lap.h  TcxDataSource.cpp  TcxDataSource.h  TcxWriter.cpp  TcxWriter.h  Trackpoint.cpp  Trackpoint.h  TreeItem.cpp  TreeItem.h  src.pro
tests/: ActivityDB_Test.cpp  CMakeLists.txt  TcxDataSource_Test.cpp  TcxWriter_Test.cpp  main.cpp  tests.pro  tests.qrc  tst_exporttest.cpp  tst_exporttest.h  tst_importtest.cpp  tst_importtest.h
tests/data/: sample.tcx
widgets/: CMakeLists.txt  SearchWidget.cpp  SearchWidget.h  widgets.qrc
widgets/forms/: SearchWidgetBase.ui
